@@ -6,6 +6,7 @@
 - Removed warnhook.py, we now use the one from ZODB.tests.
 - Removed doctest.py, we now use the one from zope.testing.
 - Removed dochttp.py + test, we now use the one from zope.app.tests.
+- ZopeLite now takes care not to monkey patch an already running Zope.
 
 0.9.6
 - Dropped support for Zope 2.5 as it lacks the setSecurityManager() API.
